--- a/css/style.css
+++ b/css/style.css
@@ -668,6 +668,17 @@ body, html {
         margin: auto;
     }
 
+    .text-container-2 h1{
+        font-size:  30px;
+    }
+
+    .text-container-2 h2{
+        font-size: 25px;
+    }
+
+    .text-container-2 p{
+        font-size: 17px;
+    }
 }
 
 
