--- a/css/style.css
+++ b/css/style.css
@@ -172,6 +172,14 @@ a{
     /* overflow-x: scroll; */
 }
 
+
+.mySwiper{
+    flex-direction: column;
+}
+
+
+
+
 .swiper-wrapper{
     padding: auto;
     width: auto;
@@ -189,7 +197,115 @@ a{
     padding: auto;
 }
 
+.swiper-container {
+    position: relative;
+    width: 100%;
+    max-width: 1000px;
+    margin: 50px auto;
+    overflow: hidden;
+}
 
+.swiper {
+    width: 100%;
+    /* height: 200px; */
+    overflow: visible;
+    height: auto;
+}
+
+.swiper-slide {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0.5;
+    transition: opacity 0.3s ease, transform 0.3s ease;
+    transform: scale(0.8);
+}
+
+.swiper-slide-active {
+    opacity: 1;
+    transform: scale(1);
+}
+
+/* 矢印ボタンのデザイン */
+.swiper-button-prev, .swiper-button-next {
+    position: absolute;
+    top: 50%;
+    /* transform: translateY(-50%); */
+    width: 50px;
+    height: 50px;
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: background 0.3s;
+}
+
+.swiper-button-prev:hover, .swiper-button-next:hover {
+    background: rgba(0, 0, 0, 0.8);
+}
+
+.swiper-button-prev {
+    left: 10px;
+}
+
+.swiper-button-next {
+    right: 10px;
+}
+
+
+
+
+
+
+
+.slide-content {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+
+.slide-content img {
+    max-height: 150px;
+    object-fit: cover;
+}
+
+/* 進行バーのデザイン */
+.progress-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 90%;
+    max-width: 800px;
+    margin: 20px auto;
+    position: relative;
+}
+
+.progress-bar {
+    flex: 1;
+    height: 6px;
+    background: #ddd;
+    border-radius: 3px;
+    position: relative;
+    transition: none; /* 初期状態ではアニメーションなし */
+    width: 0%;
+    background: blue;
+}
+
+/* ボタン */
+.group-list-btn {
+    margin-left: 20px;
+    background: blue;
+    color: white;
+    border: none;
+    padding: 8px 20px;
+    font-size: 14px;
+    cursor: pointer;
+    border-radius: 5px;
+}
 
 
 .topics {
@@ -568,6 +684,12 @@ gap: 30px;
         height: auto;
     }
 
+
+    .header-logo img{
+        height: 50px;
+    }
+
+
     .hamburger-menu {
         position: fixed;
         top: 20px;
@@ -704,6 +826,36 @@ gap: 30px;
         max-width: 80%;
         height: auto;
     }
+
+        .swiper-button-prev, .swiper-button-next{
+            position: static;
+        }
+
+    .swiper-button{
+        display: flex;
+        right: 0%;
+        height: 30px;
+    }    
+
+
+    .progress-container{
+        display: block;
+    }
+
+    .group-list-btn{
+        margin: 20px auto;
+    }
+
+
+
+
+
+
+
+
+
+
+
 
 
     .topics-container{
