--- a/css/style.css
+++ b/css/style.css
@@ -95,10 +95,14 @@ header{
 .index{
     display: flex;
     height: 100%;
+    justify-content: space-between;
+    width: 80%;
+    margin: auto;
 }
 
 .index-text{
     color: #000;
+    font-weight: 700;
 }
 
 
