--- a/css/style.css
+++ b/css/style.css
@@ -686,6 +686,144 @@ gap: 30px;
 
 
 
+
+@media(max-width: 480px){
+
+main,body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Arial', sans-serif;
+    overflow: hidden;
+    text-align: center;
+    max-width: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: 'Arial', sans-serif;
+    background: #f5f5f5;
+    color: #333;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(20px);/*下からふわっと上がる */
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50px;
+    box-shadow: 0 0 10px -6px #000;
+    z-index: 1000;
+    background-color: #fff;
+    max-width: 100%;
+}
+
+.header-logo{
+    text-align: left;
+}
+
+.hamburger-menu {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    width: 40px;
+    height: 30px;
+    cursor: pointer;transition: opacity .3s ease-in-out;
+    display: none;
+}
+
+.bar {
+    width: 100%;
+    height: 5px;
+    background: #333;
+    margin: 6px;
+    transition: .3s;
+}
+
+/* ごめん｡コメントにして消してる */
+/* .close-btn {
+    position: fixed;
+    top: 8px;
+    right: 23px;
+    font-size: 55px;
+    cursor: pointer;
+    color: white;
+    transition: color .3s ease;
+    z-index: 1001;
+    display: none;/*初期状態では非表示
+} */
+
+.header-all {
+    margin-top: 10px;
+    margin-left: 20px;
+}
+
+.header-upper {
+    justify-content: center;
+    height: 65px;
+}
+
+/* ハンバーガーメニューのアイコン以下2つ */
+#open-btn {
+    position: absolute;
+    top: 22px;
+    right: 10%;
+    display: block;
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: #e93;
+    color: #fff;
+    line-height: 40px;
+}
+
+#close-btn {
+    position: absolute;
+    top: 22px;
+    right: 10%;
+    cursor: pointer;
+    user-select: none;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: #000;
+    color: #fff;
+    line-height: 40px;
+    display: none;
+}
+
+.header-under {
+    transform: translateX(100%);
+    transition: transform .5s ease-in-out;
+}
+
+/* ここから追加要素 */
+ul {
+    border-top: solid 1px #9c9c9c;
+    margin: 0;
+}
+
+li {
+    list-style: none;
+}
+
+.index-text {
+    text-decoration: none;
+    color: #000;
+}
+}
+
+
+
 /* スマホ版 */
 @media(max-width: 480px){
     header{
@@ -720,13 +858,14 @@ gap: 30px;
 
     .header-all{
         margin: 15px 0;
+        height: 50px;
     }
 
 
     .header-under{
-        position: fixed;
+        /* position: fixed;
     top: 0;
-    right: -100%; /* 初期状態で画面外 */
+    right: -100%;
     width: 70%;
     max-width: 300px;
     height: 100%;
@@ -738,11 +877,14 @@ gap: 30px;
     padding: 60px 20px;
     transition: right 0.3s ease-in-out;
     box-shadow: -4px 0 10px rgba(0, 0, 0, 0.2);
-    z-index: 999;
+    z-index: 999; */
+    background: #222;
+    height: 700px;
     }
 
     .index{
         display: block;
+   
     }
 
 
